<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".HomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <!--            <com.example.sparrownotes.util.NoScrollViewPager-->
            <!--                android:id="@+id/view_pager"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:background="@color/background"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/dock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0"
            tools:context=".fragment.DockFragment">

            <RadioGroup
                android:id="@+id/dock_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dock"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/btn_top"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/dock_top_selector"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="@string/top"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/btn_add"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/dock_add_selector"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="@string/create"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/btn_all"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/dock_list_selector"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textSize="15sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:theme="@style/MenuTextStyle"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>